<resources>
    <string name="app_name">QuizApp</string>
    <string name="main_titel">Quiz: Breast Cancer</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="test_titel">A.Test your knowledge of 6 common beliefs about breast cancer.</string>
    <string name="select_Msg">** Select the correct statements **</string>
    <string name="statement1"> You can get breast cancer even if it doesn’t run in your family.</string>
    <string name="statement2"> If breast cancer runs in your family, you’re sure to get it.</string>
    <string name="statement3"> You still need mammograms after menopause.</string>
    <string name="statement4"> Men can get breast cancer.</string>
    <string name="statement5"> Surgery and needle biopsies can cause breast cancer to spread.</string>
    <string name="statement6"> There’s nothing you can do to lower your breast cancer risk.</string>
    <string name="txt_questionB">B.In which gender breast cancer is the most common cancer worldwide ?</string>
    <string name="txt_questionC">C.Which country had the highest rate of breast cancer ?</string>
    <string name="Belgium">Belgium</string>
    <string name="Denmark">Denmark</string>
    <string name="France">France</string>
    <string name="submit">Get Your Score</string>
</resources>
